--- a/app/src/main/res/layout-land/fragment_step.xml
+++ b/app/src/main/res/layout-land/fragment_step.xml
@@ -7,8 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:tag="layout/fragment_step_1">
+        android:orientation="vertical">
 
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
@@ -54,24 +53,20 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/hyper_margin"
                 android:layout_marginEnd="@dimen/hyper_margin"
+                android:layout_marginStart="@dimen/hyper_margin"
                 android:layout_weight="1"
-                android:background="@drawable/recipe_background_green"
-                android:text="@string/previous_btn"
-                android:textColor="@android:color/white" />
+                android:text="@string/previous_btn" />
 
             <Button
                 android:id="@+id/btn_next_step"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/hyper_margin"
                 android:layout_marginEnd="@dimen/hyper_margin"
+                android:layout_marginStart="@dimen/hyper_margin"
                 android:layout_weight="1"
-                android:background="@drawable/recipe_background_green"
-                android:text="@string/next_btn"
-                android:textColor="@android:color/white" />
+                android:text="@string/next_btn" />
         </LinearLayout>
     </LinearLayout>
 </layout>
