Fix rotation and update to Android 28
Signed-off-by: Heather <heathermcfadden2@gmail.com>

--- a/app/src/main/res/layout-land/activity_recipe_list.xml
+++ b/app/src/main/res/layout-land/activity_recipe_list.xml
@@ -12,6 +12,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:tag="layout/recipe_list_land"
             android:baselineAligned="false"
             android:divider="?android:attr/dividerHorizontal"
             android:orientation="horizontal"
