--- a/app/src/main/res/xml/baking_app_widget_info.xml
+++ b/app/src/main/res/xml/baking_app_widget_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+<appwidget-provider
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/ingredients_widget_list_item"
     android:initialLayout="@layout/ingredients_widget_list_item"
     android:minWidth="40dp"
@@ -7,4 +8,6 @@
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:widgetCategory="home_screen">
+
+</appwidget-provider>
