--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ingredient_item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,5 +54,5 @@
             app:layout_constraintStart_toEndOf="@id/tv_ingredient_measure"
             tools:text="flour" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
