--- a/app/src/main/res/layout-land/fragment_recipe.xml
+++ b/app/src/main/res/layout-land/fragment_recipe.xml
@@ -10,7 +10,7 @@
         android:layout_height="0dp"
         android:visibility="gone"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
 
         android:id="@+id/rv_step_list"
         android:layout_width="match_parent"
