--- a/app/src/main/res/layout-land/recipe_list_item.xml
+++ b/app/src/main/res/layout-land/recipe_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
             android:contentDescription="@string/image"
-            android:src="@drawable/recipe_icon" />
+            app:srcCompat="@drawable/recipe_icon" />
 
         <TextView
             android:id="@+id/tv_recipe_name"
