--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,23 +11,38 @@
         android:orientation="vertical">
 
 
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/simple_exo_player_view"
+        <FrameLayout
+            android:id="@+id/player_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/normal_margin"
-            android:layout_marginTop="@dimen/normal_margin"
-            android:layout_marginEnd="@dimen/normal_margin"
-            android:layout_weight="1"
-            android:visibility="visible"
-            app:auto_show="false"
-            app:fastforward_increment="1000"
-            app:rewind_increment="1000" />
+            android:layout_height="@dimen/item_width"
+            android:layout_margin="8dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:padding="8dp"
+                android:visibility="gone"
+                app:srcCompat="@drawable/film" />
+
+            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                android:id="@+id/simple_exo_player_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                app:fastforward_increment="1000"
+                app:rewind_increment="1000" />
+
+
+        </FrameLayout>
+
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/big_margin"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_weight="1"
             android:padding="8dp">
 
@@ -43,9 +56,9 @@
             android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/normal_margin"
-            android:layout_marginEnd="@dimen/normal_margin"
             android:layout_marginStart="@dimen/normal_margin"
+            android:layout_marginEnd="@dimen/normal_margin"
+            android:layout_marginBottom="@dimen/normal_margin"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -54,8 +67,8 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/hyper_margin"
                 android:layout_marginStart="@dimen/hyper_margin"
+                android:layout_marginEnd="@dimen/hyper_margin"
                 android:layout_weight="1"
                 android:background="@drawable/recipe_background_green"
                 android:text="@string/previous_btn"
@@ -66,13 +79,12 @@
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/hyper_margin"
                 android:layout_marginStart="@dimen/hyper_margin"
+                android:layout_marginEnd="@dimen/hyper_margin"
                 android:layout_weight="1"
                 android:background="@drawable/recipe_background_green"
                 android:text="@string/next_btn"
                 android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
-    </android.support.constraint.ConstraintLayout>
 </layout>
