--- a/app/src/main/res/layout/ingredients_widget_list_item.xml
+++ b/app/src/main/res/layout/ingredients_widget_list_item.xml
@@ -2,18 +2,19 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="match_parent"
+    android:background="#09C"
+    android:orientation="vertical">
+
 
     <TextView
-        android:id="@+id/tv_ingredient_widget"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_marginStart="@dimen/normal_margin"
-        android:id="@+id/tv_quantity_widget"
+        android:id="@+id/recipe_widget_listview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAlignment="viewStart"
+        android:textStyle="bold"
+        android:textSize="10sp"
+        android:layout_margin="3dp"
+        android:gravity="start" />
+
 </LinearLayout>
