--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/step_item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,5 +42,5 @@
             app:layout_constraintStart_toStartOf="@+id/tv_step_id_label"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_id_label"
             tools:text="Starting prep" />
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
