--- a/app/src/main/res/layout-land/fragment_step.xml
+++ b/app/src/main/res/layout-land/fragment_step.xml
@@ -20,12 +20,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp">
 
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="8dp"
+                    android:padding="8dp"
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/film">
+
+                </ImageView>
+
                 <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                     android:id="@+id/simple_exo_player_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:visibility="visible"
-                    app:auto_show="false"
                     android:layout_gravity="center_horizontal"
                     app:fastforward_increment="1000"
                     app:rewind_increment="1000" />
