--- a/app/src/main/res/layout-land/ingredient_list_item.xml
+++ b/app/src/main/res/layout-land/ingredient_list_item.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/ingredient_item_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,9 +20,7 @@
             android:padding="8dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="2 " />
+            tools:text="2" />
 
         <TextView
             android:id="@+id/tv_ingredient_measure"
@@ -33,8 +30,6 @@
             android:padding="8dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/tv_ingredient_quantity"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="cups" />
 
         <TextView
@@ -45,11 +40,9 @@
             android:padding="8dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@id/tv_ingredient_measure"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="flour" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
 </layout>
