--- a/app/src/main/res/layout/baking_app_widget.xml
+++ b/app/src/main/res/layout/baking_app_widget.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="4dp"
     android:background="@drawable/recipe_background_transparent"
     android:orientation="horizontal"
@@ -14,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:contentDescription="@string/widget_previous_arrow_content_description"
-        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24px" />
+        android:src="@drawable/ic_baseline_keyboard_arrow_left_24px" />
 
 
     <LinearLayout
@@ -28,48 +27,22 @@
 
         <TextView
             android:id="@+id/tv_recipe_name"
-            style="@style/widget_primary_text"
+            style="@style/single_widget_primary_text"
+            android:backgroundTint="@color/design_default_color_primary_variant"
             tools:text="Nutella Pie" />
 
 
+        <ListView
+            android:id="@+id/recipe_widget_listview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/ingredient_list_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="8dp">
-
-
-
-                    <TextView
-                        android:id="@+id/tv_ingredients_header"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="8dp"
-                        android:text="@string/ingredients_header"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                    <ListView
-                        android:id="@+id/recipe_widget_listview"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="@dimen/detail_padding"
-                        android:paddingRight="@dimen/detail_padding"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tv_ingredients_header"
-                        tools:listitem="@layout/ingredients_widget_list_item" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_next_nav"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:contentDescription="@string/widget_next_arrow_content_description"
-        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24px" />
+        android:src="@drawable/ic_baseline_keyboard_arrow_right_24px" />
 </LinearLayout>
-    </LinearLayout>
