--- a/app/src/main/res/layout/ingredient_list_item.xml
+++ b/app/src/main/res/layout/ingredient_list_item.xml
@@ -1,58 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:tag="layout/ingredient_list_item_0">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/ingredient_item_container"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_ingredient_quantity"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/detail_padding"
-        android:paddingLeft="@dimen/detail_padding"
-        android:paddingEnd="@dimen/detail_padding"
-        android:paddingRight="@dimen/detail_padding">
+        android:paddingEnd="4dp"
+        tools:text="2" />
 
-        <TextView
-            android:id="@+id/tv_ingredient_quantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="2 " />
+    <TextView
+        android:id="@+id/tv_ingredient_measure"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingEnd="6dp"
+        tools:text="cups" />
 
-        <TextView
-            android:id="@+id/tv_ingredient_measure"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/tv_ingredient_quantity"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="cups" />
+    <TextView
+        android:id="@+id/tv_ingredient_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        tools:text="flour" />
 
-        <TextView
-            android:id="@+id/tv_ingredient_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/tv_ingredient_measure"
-            tools:text="flour" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+</LinearLayout>
