--- a/app/src/main/res/xml/baking_app_widget_info.xml
+++ b/app/src/main/res/xml/baking_app_widget_info.xml
@@ -2,9 +2,11 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/baking_app_widget"
     android:initialLayout="@layout/baking_app_widget"
-    android:minHeight="80dp"
-    android:minWidth="80dp"
+    android:minWidth="320dp"
+    android:minHeight="120dp"
     android:previewImage="@drawable/recipe_icon"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="1800000"
-    android:widgetCategory="home_screen"/>
+    android:updatePeriodMillis="86400000"
+    android:widgetCategory="home_screen">
+
+</appwidget-provider>
